testcases/malgo/error/ErrorKind.mlg
module ErrorKind = {
  def id : a -> a;
  def id = {x -> x};
  def main = { id 42# };
}